--- a/BusinessData/todolist_BusinessLogic.csproj
+++ b/BusinessData/todolist_BusinessLogic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\datalogictask\todolist_DataLogic.csproj" />
+    <ProjectReference Include="..\todolist_Common\todolist_Common.csproj" />
   </ItemGroup>
 
 </Project>
