--- a/datalogictask/todolist_DataLogic.csproj
+++ b/datalogictask/todolist_DataLogic.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\todolist_Common\todolist_Common.csproj" />
   </ItemGroup>
 
