--- a/todolistloginsystem/todolistloginsystem.csproj
+++ b/todolistloginsystem/todolistloginsystem.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BusinessData\todolist_BusinessLogic.csproj" />
     <ProjectReference Include="..\datalogictask\todolist_DataLogic.csproj" />
+    <ProjectReference Include="..\todolist_Common\todolist_Common.csproj" />
   </ItemGroup>
 
 </Project>
